# lib-streamlabs-ipc

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml
include/: async_op.hpp  error.hpp  ipc-class-manager.hpp  ipc-class.hpp  ipc-client-instance.hpp  ipc-client.hpp  ipc-communication.hpp  ipc-function.hpp  ipc-message.hpp  ipc-server-instance.hpp  ipc-server.hpp  ipc-socket.hpp  ipc-value.hpp  ipc.hpp  os-error.hpp  os-namedsocket-win.hpp  os-namedsocket.hpp  os-signal-win.hpp  os-signal.hpp  semaphore.hpp  tags.hpp  util.h  waitable.hpp
proto/: example.proto  ipc.proto
samples/cpp/: CMakeLists.txt  test.cpp
samples/node.js/: .gitignore  .gitmodules  CMakeLists.txt  README.md
samples/node.js/electron/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json
samples/node.js/streamlabs-ipc-node/: CMakeLists.txt  index.js  module.cpp  module.hpp  package.json
samples/node.js/streamlabs-ipc-node-server/: CMakeLists.txt  main.cpp
source/: async_op.cpp  ipc-class-manager.cpp  ipc-class.cpp  ipc-client-instance.cpp  ipc-client.cpp  ipc-communication.cpp  ipc-function.cpp  ipc-message.cpp  ipc-server-instance.cpp  ipc-server.cpp  ipc-value.cpp  ipc.cpp  os-namedsocket-win.cpp  os-namedsocket.cpp  os-signal-win.cpp  os-signal.cpp
source/apple/: async_request.cpp  async_request.hpp  ipc-client-osx.cpp  ipc-client-osx.hpp  ipc-server-instance-osx.cpp  ipc-server-instance-osx.hpp  ipc-socket-osx.cpp  ipc-socket-osx.hpp  named-pipe.cpp  named-pipe.hpp  semaphore.cpp  semaphore.hpp  waitable.cpp
source/windows/: async_request.cpp  async_request.hpp  ipc-client-win.cpp  ipc-client-win.hpp  ipc-server-instance-win.cpp  ipc-server-instance-win.hpp  ipc-socket-win.cpp  ipc-socket-win.hpp  named-pipe.cpp  named-pipe.hpp  overlapped.cpp  overlapped.hpp  semaphore.cpp  semaphore.hpp  utility.cpp  utility.hpp  waitable.cpp
test/: CMakeLists.txt  test.cpp
tests/ipc/simple-multi-client/: CMakeLists.txt  test.cpp
tests/ipc/synchronous-call/: CMakeLists.txt  test.cpp
tests/os-namedsocket/raw-data/: CMakeLists.txt  test.cpp
tests/os-namedsocket/read-no-sleep/: CMakeLists.txt  test.cpp
tests/os-namedsocket/single-in-single-out/: CMakeLists.txt  test.cpp
tests/shared/: CMakeLists.txt  lib.cpp  lib.h
