cmake_minimum_required(VERSION 3.5)
project(lib-streamlabs-ipc-sample-nodejs)

ADD_SUBDIRECTORY("../../" "${PROJECT_BUILD_DIR}lib-streamlabs-ipc")
ADD_SUBDIRECTORY(streamlabs-ipc-node)
ADD_SUBDIRECTORY(streamlabs-ipc-node-server)

# Only allow Debug or Release builds.
SET(CMAKE_CONFIGURATION_TYPES			"Debug;Release")
SET(CMAKE_CXX_FLAGS_RELEASE				"${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_C_FLAGS_RELEASE				"${CMAKE_C_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE		"${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_MODULE_LINKER_FLAGS_RELEASE	"${CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_RC_LINKER_FLAGS_RELEASE		"${CMAKE_RC_LINKER_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE	"${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO}")
SET(CMAKE_STATIC_LINKER_FLAGS_RELEASE	"${CMAKE_STATIC_LINKER_FLAGS_RELWITHDEBINFO}")